# my-scf

./: CMakeLists.txt  DSC0539_features.txt  DSC0543_features.txt  Dataset.cpp  Dataset.hpp  SCF_main.cpp  brute_force_kNN.cpp  compile_commands.json  features_of_img01.txt  features_of_img02.txt  kNN.cpp  kNN.hpp  main.cpp  my_SCF_test.cpp  opencv_SIFT_with_flann.cpp  parallel_numa.cpp
openmp_demo/: openmp_matrix_multiplication.cpp
pthread_demo/: matrix_multiplication.cpp
xiaoxin_kNN/: CMakeLists.txt  csv_parser.cpp  main.cpp  main.h  sdc_index.cpp  sdc_index.h  sdc_kmeans.h
xiaoxin_kNN/features/: _DSC0539.jpg.exact  _DSC0543.jpg.txt  gps-sift-small.csv
